--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -188,6 +188,23 @@
             </div>
           </div>
           <br />
+           <div
+            class="row"
+            style="
+              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+              padding-bottom: 5%;
+              width: 100%;
+            "
+          >
+            <div class="col-sm-6">
+              <h5 style="color: white">Notes</h5>
+              <textarea
+                style="width: 420px; height: 100%; font-size: 15px"
+                type="text"
+               ></textarea>
+            </div>
+            </div>
+            <br>
           <center>
             <button
               style="font-size: 15px"
