--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -101,11 +101,9 @@
    <br>
    <div class="col-sm-10">
    <div class="row">
-<i class="fas fa-phone" style="color:white;opacity:0.7;"></i>
-<i class="fa-solid fa-user-plus" style="color:white;opacity:0.7;"></i>
-<i class="fa-solid fa-comment-dots" style="color:white;opacity:0.7;"></i>
-
-
+<i class="fa-solid fa-phone" id = "awe" style="color:white;opacity:0.7; font-size:15px; padding:2%;"></i>
+<i class="fa-solid fa-message" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i>
+<i class="fa-solid fa-users" id = "awe" style="color:white;opacity:0.7;  font-size:15px; padding:2%;"></i>
 </div></div>
          </div>
          </div>   
