--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -3,6 +3,32 @@
 
 <section id="section3" >
 
+<div id="headpic">
+ <div id = "subpic">
+   <div class = "col-sm-8" id="myborder">
+     <h4 style="color: white;font-weight: bold;">UG CAREER AND COUNSELLING DEPARTMENT</h4>
+      </div>
+      <div class="4">
+    </div>
+      <br>
+      <div class="col-sm-12">
+ <a href="{% url 'counsellingUrls:search' pk%}" style="color: white;">Search for Counsellors</a>
+      </div>
+   {% comment %} {% for object in objects %}
+           {% if object.user_id == pk|add:0 %}
+  <img src="{{ object.profile.url }}" alt="profile picture" id = "idpicture"/>
+  {% else %}{% endif %}
+  {% endfor %} {% endcomment %}
+  
+ </div>
+</div>
+
+
+
+
+
+
+
   {% comment %} <div id = "adjust" >
 
 
